@@ -43,7 +43,26 @@ private:
 	const VEC_TYPE& object ;
 	int times, n ;
 } ;
+
+template <typename T>
+class Rep_Single : public Rcpp::VectorBase< 
+	Rcpp::traits::r_sexptype_traits<T>::rtype, 
+	true, 
+	Rep_Single<T>
+> {
+public:
+	Rep_Single( const T& x_, int n_) : x(x_), n(n_){}
 	
+	inline T operator[]( int i ) const {
+		return x;
+	}
+	inline int size() const { return n ; }
+
+private:
+	const T& x ;
+	int n ;
+} ;
+
 } // sugar
 
 template <int RTYPE, bool NA, typename T>
@@ -51,6 +70,21 @@ inline sugar::Rep<RTYPE,NA,T> rep( const VectorBase<RTYPE,NA,T>& t, int n ){
 	return sugar::Rep<RTYPE,NA,T>( t, n ) ;
 }
 
+inline sugar::Rep_Single<double> rep( const double& x, int n ){
+	return sugar::Rep_Single<double>( x, n ) ;
+}
+inline sugar::Rep_Single<int> rep( const int& x, int n ){
+	return sugar::Rep_Single<int>( x, n ) ;
+}
+inline sugar::Rep_Single<Rbyte> rep( const Rbyte& x, int n ){
+	return sugar::Rep_Single<Rbyte>( x, n ) ;
+}
+inline sugar::Rep_Single<Rcomplex> rep( const Rcomplex& x, int n ){
+	return sugar::Rep_Single<Rcomplex>( x, n ) ;
+}
+inline sugar::Rep_Single<bool> rep( const bool& x, int n ){
+	return sugar::Rep_Single<bool>( x, n ) ;
+}
 
 } // Rcpp
 #endif
